Order Details Validations

--- a/Views/Booking/Create.cshtml
+++ b/Views/Booking/Create.cshtml
@@ -65,7 +65,123 @@
 
                 }
             </div>
-            <img src="/Image/MicrosoftTeams-image (1).png" alt="Image" height="250" width="250" />
+            <!DOCTYPE html>
+            <html>
+            <head>
+                <style>
+                    table, th, td {
+                        border-collapse: collapse;
+                        border-width: 1mm;
+                    }
+
+                        table.center {
+                            margin-left: auto;
+                            margin-right: auto;
+                        }
+
+                    tr {
+                        border-bottom: 1px solid rgba(150, 212, 212, 0.4);
+                    }
+
+                    
+
+                    tr:nth-child(even) {
+                        background-color: rgba(150, 212, 212, 0.4);
+                    }
+
+                    th:nth-child(even), td:nth-child(even),td:hover {
+                        background-color: rgba(150, 212, 212, 0.4);
+                    }
+                    td:hover {
+                        background-color: rgba(5, 66, 35);
+                    }
+                </style>
+            </head>
+            <h1 style="text-align=center">Seating  Arrangement</h1>
+            <body>
+                <p class="text-primary">Please Mention the required seats individually seperated by coma(,)</p>
+                <table class="center" style="width:50%;text-align: center;">
+                    <tr>
+                        <th colspan="5">Screen</th>
+                    </tr>
+                    <tr style="height:25px;">
+                        <td colspan="5"></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>4</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>12</td>
+                        <td>13</td>
+                        <td>14</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>16</td>
+                        <td>17</td>
+                        <td>18</td>
+                        <td>19</td>
+                        <td>20</td>
+                    </tr>
+                    <tr>
+                        <td>21</td>
+                        <td>22</td>
+                        <td>23</td>
+                        <td>24</td>
+                        <td>25</td>
+                    </tr>
+                    <tr>
+                        <td>26</td>
+                        <td>27</td>
+                        <td>28</td>
+                        <td>29</td>
+                        <td>30</td>
+                    </tr>
+                    <tr>
+                        <td>31</td>
+                        <td>32</td>
+                        <td>33</td>
+                        <td>34</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <td>36</td>
+                        <td>37</td>
+                        <td>38</td>
+                        <td>39</td>
+                        <td>40</td>
+                    </tr>
+                    <tr>
+                        <td>41</td>
+                        <td>42</td>
+                        <td>43</td>
+                        <td>44</td>
+                        <td>45</td>
+                    </tr>
+                    <tr>
+                        <td>46</td>
+                        <td>47</td>
+                        <td>48</td>
+                        <td>49</td>
+                        <td>50</td>
+                    </tr>
+                </table>
+            </body>
+        </html>
+
+           @* <img src="/Image/MicrosoftTeams-image (1).png" alt="Image" height="250" width="250" />*@
             @*<div class="form-group">
                 <label asp-for="SeatNo" class="control-label"></label>
                
