--- a/Views/Shared/UserLayout.cshtml
+++ b/Views/Shared/UserLayout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="Index">Cart</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderDetails" asp-action="Index">Order History</a>
+                        </li>
                         @* <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>*@
