--- a/Views/Shared/UserLayout.cshtml
+++ b/Views/Shared/UserLayout.cshtml
@@ -25,9 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="OrderDetails" asp-action="Index">Order History</a>
                         </li>
-                        @* <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
+                         <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="DateSearch">Date Search</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
