validation for capacity

--- a/Views/Booking/Create.cshtml
+++ b/Views/Booking/Create.cshtml
@@ -51,6 +51,12 @@
                 <label asp-for="SeatNo" class="control-label"></label>
                 <input asp-for="SeatNo" class="form-control" />
                 <span asp-validation-for="SeatNo" class="text-danger"></span>
+                @if(ViewBag.ErrMessage!=null)
+                {
+                    <div class="text-danger">
+                        @ViewBag.ErrMessage
+                </div>
+                }
                 @if (ViewBag.ValidationMesssage != null)
                 {
                 <div class="text-danger">
