--- a/Views/Movie/Details.cshtml
+++ b/Views/Movie/Details.cshtml
@@ -64,7 +64,7 @@
 </div>
 <div>
       @*  <a asp-controller="Booking" asp-action="create" asp-route-id="@Model.MovieId">BookNow</a> |*@
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="DateSearch">Back to Home</a>
 </div>
 }
 else
