--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CPassword" class="control-label"></label>
+                <input asp-for="CPassword" type="password" class="form-control" />
+                <span asp-validation-for="CPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Sign Up" class="btn btn-primary" />
             </div>
         </form>
