--- a/Views/Shared/UserLayout.cshtml
+++ b/Views/Shared/UserLayout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="OrderDetails" asp-action="Index">Order History</a>
                         </li>
                          <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="DateSearch">Date Search</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Date Search</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
