--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -31,7 +31,7 @@
         {
           <form asp-controller="Movie" asp-action="search">
             <p>
-                Search By Date: <input type="text" name="SearchString" />
+                Search By Date: <input type="date" name="searchdate" />
                 <input type="submit" value="Search" />
             </p>
           </form>
