--- a/Views/Movie/Search.cshtml
+++ b/Views/Movie/Search.cshtml
@@ -1,10 +1,14 @@
 ﻿@model IEnumerable<demo.Models.MovieTbl>
 
 @{
-    ViewData["Title"] = "Search";
+    ViewData["Title"] = "search";
 }
 
-<h1>Search</h1>
+<h1>search</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -36,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.MovieName)
             </td>
             <td>
-                   <img src="/Image/@item.Image" alt="Image" height="100" width="100" />
+                    <img src="/Image/@item.Image" alt="Image" height="100" width="100" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
@@ -51,8 +55,8 @@
                 @Html.DisplayFor(modelItem => item.capacity)
             </td>
             <td>
-                     <a asp-action="BookNow" asp-route-id="@item.MovieId">Book Now</a> |
-                            <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
+                    <a asp-action="BookNow" asp-route-id="@item.MovieId">Book Now</a> |
+                    <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
             </td>
         </tr>
 }
