--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -35,7 +35,8 @@
     }
     else
     {
-        <div class="dropdown">
+
+        @*<div class="dropdown">
             <button class="btn btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 Login
             </button>
@@ -43,7 +44,20 @@
                 <li><a class="dropdown-item" href="User/Login">User</a></li>
                 <li><a class="dropdown-item" href="Admin/Login">Admin</a></li>
             </ul>
-        </div>
+        </div>*@
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+                    <button class="btn btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        Login
+                    </button>
+          <ul class="dropdown-menu" role="menu">
+                        <li><a href="User/Login">User</a></li>
+                        <li><a href="Admin/Login">Admin</a></li>
+          </ul>
+        </li>
+      </ul>
+      </div>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
         </li>
