--- a/Views/Booking/Create.cshtml
+++ b/Views/Booking/Create.cshtml
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="~/css/StyleSheet.css">
 </head>*@
 
-<h1>Create</h1>
+<h1>Booking</h1>
 
-<h4>BookingTbl</h4>
+
 
 @{
     if (ViewBag.ErrorMessage != null)
