--- a/Views/Movie/Search.cshtml
+++ b/Views/Movie/Search.cshtml
@@ -1,15 +1,23 @@
 ﻿@model IEnumerable<demo.Models.MovieTbl>
+@inject IHttpContextAccessor HttpContextAccesor
 
 @{
     ViewData["Title"] = "search";
+    ViewBag.UserName = @HttpContextAccesor.HttpContext.Session.GetString("Username");
+    if (ViewBag.UserName != null)
+    {
+        Layout = "UserLayout";
+    }
+    else
+    {
+        Layout = "AdminLayout";
+    }
 }
 
-<h1>search</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>Search</h1>
 <table class="table">
+   @if (ViewBag.UserName != null)
+   {
     <thead>
         <tr>
             <th>
@@ -34,7 +42,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+ @foreach (var item in Model) 
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.MovieName)
@@ -59,6 +68,66 @@
                     <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
             </td>
         </tr>
-}
+    }
     </tbody>
+   }
+ else
+ {
+  <p>
+    <a asp-action="Create">Create New</a>
+  </p>
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.MovieName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Slot)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cost)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.capacity)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) 
+   {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.MovieName)
+            </td>
+            <td>
+                    <img src="/Image/@item.Image" alt="Image" height="100" width="100" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Slot)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cost)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.capacity)
+            </td>
+            <td>
+                        <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.MovieId">Delete</a>
+            </td>
+        </tr>
+   }
+    </tbody>
+
+  }
 </table>
