--- a/Views/OrderDetails/Index.cshtml
+++ b/Views/OrderDetails/Index.cshtml
@@ -21,13 +21,13 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.MovieId)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.MovieName)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.MovieDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Slot)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.UserId)
@@ -51,13 +51,13 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.MovieId)
-                        </td>
-                        <td>
                             @Html.DisplayFor(modelItem => item.MovieName)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.MovieDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Slot)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.UserId)
@@ -101,6 +101,9 @@
                     @Html.DisplayNameFor(model => model.MovieDate)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.Slot)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.UserId)
                 </th>
                 <th>
@@ -130,6 +133,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.MovieDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Slot)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.UserId)
