--- a/Views/Shared/ODLayout.cshtml
+++ b/Views/Shared/ODLayout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/demo.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/SandStoneTheme.css" />
 </head>
 <body>
     <header>
@@ -26,7 +27,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>*@
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <li class="pull-right"><partial name="_LoginPartial" /></li>
                 </div>
             </div>
         </nav>
