--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -16,11 +16,10 @@
             {
 
                     <li class="nav-item">
-                        <a @*id="Manage"*@ class="nav-link text-dark" @*asp-controller="Home" asp-action="Privacy"*@ title="Manage">Hello @ViewBag.UserName</a>
+                        <a  class="nav-link text-dark"  title="Manage">Hello @ViewBag.UserName</a>
                     </li>
                   <li class="nav-item">
                     <form>
-                        @* class="form-inline" asp-route-returnUrl="@Url.Action("Login", "Login", new { area = "" })">*@
                 <button id="Logout" type="submit" class=" btn btn-light" asp-controller="User" asp-action="Logout">Logout</button>
                     </form>
                   </li>
@@ -28,11 +27,10 @@
     else if (ViewBag.name != null)
     {
             <li class="nav-item">
-                <a @*id="Manage"*@ class="nav-link text-dark" @*asp-controller="Home" asp-action="Privacy"*@ title="Manage">Hello @ViewBag.name</a>
+                <a class="nav-link text-dark"  title="Manage">Hello @ViewBag.name</a>
             </li>
             <li class="nav-item">
                 <form>
-                 @* class="form-inline" asp-route-returnUrl="@Url.Action("Login", "Login", new { area = "" })">*@
                 <button id="Logout" type="submit" class="btn btn-light" asp-controller="Admin" asp-action="Logout">Logout</button>
                 </form>
             </li>
@@ -40,16 +38,6 @@
     }
     else
     {
-
-        @*<div class="dropdown">
-            <button class="btn btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                Login
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="dropdown-item" href="User/Login">User</a></li>
-                <li><a class="dropdown-item" href="Admin/Login">Admin</a></li>
-            </ul>
-        </div>*@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="dropdown">
