--- a/Views/OrderDetails/Index.cshtml
+++ b/Views/OrderDetails/Index.cshtml
@@ -14,7 +14,7 @@
     }
 }
 
-<h1>Order History</h1>
+<h1>Booking History</h1>
 <table class="table">
     @if (ViewBag.UserId != null)
     {
@@ -34,9 +34,6 @@
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.Slot)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.UserId)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.NoOfTickets)
@@ -64,9 +61,6 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Slot)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.UserId)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.NoOfTickets)
